Remove the patient name required for the mapping